@@ -1,18 +1,10 @@
 language: python
 python:
-  #- "2.6"
   - "2.7"
-  # 3.2 make unicode literal handling difficult. 
-  # we dropped that, see https://github.com/rthalley/dnspython/pull/148
-  # for comments
-  #- "3.2"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
-  #- "3.5-dev" # 3.5 development branch
-  #- "3.6-dev" # 3.6 development branch
-  #- "nightly" # currently points to 3.6-dev
+  #- "nightly"
 matrix:
   allow_failures:
     - python: nightly
@@ -22,5 +14,5 @@ branches:
 install:
  - pip install unittest2 pylint pycrypto ecdsa idna
 script:
- - if [[ ($TRAVIS_PYTHON_VERSION != '2.6') ]]; then make lint; fi
+ - make lint
  - make test
