@@ -1,13 +1,9 @@
 [tox]
 envlist =
-    py26,
     py27,
-    py30,
-    py31,
-    py32,
-    py33,
     py34,
-#    py35,
+    py35,
+    py36,
     flake8,
     pylint,
     coverage
